move gamelogic out, add undo/redo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ log = "0.4.20"
 wasm-logger = "0.2.0"
 yew = { version = "0.21.0", features = ["csr"] }
 yew-hooks = "0.3.0"
+yew_icons = { version = "0.8.0", features = ["LucideRedo2", "LucideUndo2"] }
