--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,7 @@
-[package]
-name = "pegsolitaire"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-bitvec = "1.0.1"
-colored = "2.0.4"
-log = "0.4.20"
-wasm-logger = "0.2.0"
-yew = { version = "0.21.0", features = ["csr"] }
-yew-hooks = "0.3.0"
-yew_icons = { version = "0.8.0", features = ["LucideRedo2", "LucideUndo2"] }
+[workspace]
+resolver = "2"
+members = [
+    "frontend",
+    "server",
+    "common",
+]
