--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -10,3 +10,6 @@ yew = { version = "0.21.0", features = ["csr"] }
 yew-hooks = "0.3.0"
 yew_icons = { version = "0.8.0", features = ["LucideRedo2", "LucideUndo2"] }
 common = { path = "../common" }
+
+[build-dependencies]
+server = { version = "0.1.0", path = "../server" }
