--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,16 +11,18 @@ tokio = { version = "1.34.0", features = ["full"] }
 common = { path = "../common" }
 rayon = "1.11.0"
 bit-vec = "0.8.0"
-bincode = "2.0.1"
+bincode = { version = "2.0.1", default-features = false, features = ["std", "derive"] }
 rand = "0.9.2"
 primal = "0.3.3"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 rand_pcg = "0.9.0"
 tempfile = "3.21.0"
+zopfli = { version = "0.8.2", default-features = false, features = ["std"] }
 
 [profile.release]
 debug = true
 
 [dev-dependencies]
 rand = "0.9.2"
+
