--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = { version = "2.0.1", default-features = false, features = ["std", "derive"] }
+bitvec = "1.0.1"
+
+[dev-dependencies]
+rand = "0.9.2"
+tempfile = "3.21.0"
