--- a/precompute/Cargo.toml
+++ b/precompute/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "server"
+name = "precompute"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
-bitvec = "1.0.1"
 log = "0.4.20"
 tokio = { version = "1.34.0", features = ["full"] }
 common = { path = "../common" }
 rayon = "1.11.0"
-bit-vec = "0.8.0"
-bincode = { version = "2.0.1", default-features = false, features = ["std", "derive"] }
 rand = "0.9.2"
 primal = "0.3.3"
 serde = { version = "1.0.219", features = ["derive"] }
@@ -19,9 +16,6 @@ serde_json = "1.0.143"
 rand_pcg = "0.9.0"
 tempfile = "3.21.0"
 zopfli = { version = "0.8.2", default-features = false, features = ["std"] }
-
-[profile.release]
-debug = true
 
 [dev-dependencies]
 rand = "0.9.2"
