--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ members = [
     "precompute",
     "common",
 ]
+
+[workspace.dependencies]
+bitvec = "1.0.1"
+bincode = { version = "2.0.1", default-features = false, features = ["std", "derive"] }
+rand = {version = "0.9.2", default-features = false }
+rand_pcg = "0.9.0"
