--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = { version = "2.0.1", default-features = false, features = ["std", "derive"] }
-bitvec = "1.0.1"
+bincode = { workspace = true }
+bitvec = { workspace = true }
+rand = { workspace = true }
+rand_pcg = { workspace = true }
 
 [dev-dependencies]
 rand = "0.9.2"
