--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,6 +8,7 @@ bincode = { workspace = true }
 bitvec = { workspace = true }
 rand = { workspace = true }
 rand_pcg = { workspace = true }
+rustc-hash = "2.1.1"
 
 [dev-dependencies]
 rand = "0.9.2"
