--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,5 +11,6 @@ rand_pcg = { workspace = true }
 rustc-hash = "2.1.1"
 
 [dev-dependencies]
+proptest = "1.9.0"
 rand = "0.9.2"
 tempfile = "3.21.0"
