--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -14,3 +14,4 @@ gloo-net = "0.6.0"
 wasm-bindgen-futures = "0.4.50"
 web-sys = { version = "0.3.78", features = ["HtmlElement"] }
 gloo-timers = { version = "0.3.0", features = ["futures"] }
+anyhow = { version = "1.0.100", default-features = false }
